# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: check.yml  lint.yml
brain_games/: __init__.py  cli.py  engine.py  game_flow.py
brain_games/games/: brain_calc.py  brain_even.py  calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
