[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-project-lvl1-by-okeangel"
version = "0.4.0"
description = "A Hexlet Python Course lvl1 project"
authors = ["Alex Sweetall <okeangel@gmail.com>"]
packages = [
    { include = "brain_games" },
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/okeangel/python-project-lvl1"
repository = "https://github.com/okeangel/python-project-lvl1"
keywords = ["hexlet", "okeangel"]
classifiers = [
    "Environment :: Console",
    "License :: Public Domain",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
    

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.2"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

